--- a/i/index.html
+++ b/i/index.html
@@ -609,7 +609,7 @@
         </div>
       </footer>
     </footer>
-    <script type="module" src="/mian.js"></script>
+    <script type="module" src="mian.js"></script>
 
   </body>
 
