--- a/index.html
+++ b/index.html
@@ -273,6 +273,53 @@
       </div>
     </section>
 
+        <!-- Browse Matrimonial Section -->
+    <section class="py-16 bg-white">
+      <div class="max-w-4xl mx-auto px-4">
+        <div class="text-center mb-12">
+          <h2 class="text-3xl font-bold mb-4">Browse Matrimonial Profiles By Religion</h2>
+        </div>
+
+        <!-- Religion Section -->
+        <div class="flex flex-wrap justify-center gap-6 mb-8">
+
+          <a href="/matrimony/i/" target="_self"
+            class="flex items-center px-6 py-2 rounded-full bg-gray-50 hover:bg-gray-100 transition-colors shadow-md">
+            Muslim
+            <i class="fas fa-external-link-alt ml-2 text-xs text-gray-400"></i>
+          </a>
+          <a href="/matrimony/h/" target="_self"
+            class="flex items-center px-6 py-2 rounded-full bg-gray-50 hover:bg-gray-100 transition-colors shadow-md">
+            Hindu
+            <i class="fas fa-external-link-alt ml-2 text-xs text-gray-400"></i>
+          </a>
+          <a href="/matrimony/c/" target="_self"
+            class="flex items-center px-6 py-2 rounded-full bg-gray-50 hover:bg-gray-100 transition-colors shadow-md">
+            Christian
+            <i class="fas fa-external-link-alt ml-2 text-xs text-gray-400"></i>
+          </a>
+          <a href="/matrimony/b/" target="_self"
+            class="flex items-center px-6 py-2 rounded-full bg-gray-50 hover:bg-gray-100 transition-colors shadow-md">
+            Buddhist
+            <i class="fas fa-external-link-alt ml-2 text-xs text-gray-400"></i>
+          </a>
+
+          <a href="/matrimony/s/" target="_self"
+            class="flex items-center px-6 py-2 rounded-full bg-gray-50 hover:bg-gray-100 transition-colors shadow-md">
+            Sikh
+            <i class="fas fa-external-link-alt ml-2 text-xs text-gray-400"></i>
+          </a>
+          <a href="/matrimony/j/" target="_self"
+            class="flex items-center px-6 py-2 rounded-full bg-gray-50 hover:bg-gray-100 transition-colors shadow-md">
+            Jain
+            <i class="fas fa-external-link-alt ml-2 text-xs text-gray-400"></i>
+          </a>
+
+
+        </div>
+      </div>
+    </section>
+    
     <!-- FAQs -->
     <div class="bg-gray-100 p-16 mx-auto">
       <div class="max-w-6xl mx-auto"
