--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
             <h3 class="text-white text-lg font-semibold mb-4">Quick Links</h3>
             <ul class="space-y-2 text-sm">
               <li><a href="/" class="hover:text-white transition-colors">Home</a></li>
-              <li><a href="/submit.html" class="hover:text-white transition-colors">Submit Profile</a></li>
+              <li><a href="/register.html" class="hover:text-white transition-colors">Submit Profile</a></li>
               <li><a href="https://telegram.me/liverishteyofficial" class="hover:text-white transition-colors">Post
                   Ad</a></li>
               <li><a href="/privacy-policy" class="hover:text-white transition-colors">Privacy Policy</a></li>
@@ -390,11 +390,11 @@
           <div>
             <h3 class="text-white text-lg font-semibold mb-4">Our Services</h3>
             <ul class="space-y-2 text-sm">
-              <li><a href="/matrimony/muslim" class="hover:text-white transition-colors">Muslim Matrimony</a></li>
-              <li><a href="/matrimony/hindu" class="hover:text-white transition-colors">Hindu Matrimony</a></li>
-              <li><a href="/matrimony/sikh" class="hover:text-white transition-colors">Sikh Matrimony</a></li>
-              <li><a href="/matrimony/christian" class="hover:text-white transition-colors">Christian Matrimony</a></li>
-              <li><a href="/matrimony/jain" class="hover:text-white transition-colors">Jain Matrimony</a></li>
+              <li><a href="/matrimony/i/" class="hover:text-white transition-colors">Muslim Matrimony</a></li>
+              <li><a href="/matrimony/h/" class="hover:text-white transition-colors">Hindu Matrimony</a></li>
+              <li><a href="/matrimony/s/" class="hover:text-white transition-colors">Sikh Matrimony</a></li>
+              <li><a href="/matrimony/c/" class="hover:text-white transition-colors">Christian Matrimony</a></li>
+              <li><a href="/matrimony/j/" class="hover:text-white transition-colors">Jain Matrimony</a></li>
             </ul>
           </div>
           <div>
