--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- Hero Section -->
     <div class="relative min-h-screen">
       <div
-        class="absolute inset-0 bg-[url('https://media.istockphoto.com/id/955599110/photo/groom-put-a-wedding-ring-on-bride-hand.jpg?s=612x612&w=0&k=20&c=blV3PmoIb0H5_UIEBVFxlMFDlm-SyyhwUd3rXxk_zCI=')] bg-cover bg-center">
+        class="absolute inset-0 bg-[url('/img/mainhero.png')] bg-cover bg-center">
         <div class="absolute inset-0 bg-black/40"></div>
       </div>
 
