--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- Hero Section -->
     <div class="relative min-h-screen">
       <div
-        class="absolute inset-0 bg-[url('/img/mainhero.png')] bg-cover bg-center">
+        class="absolute inset-0 bg-[url('./img/mainhero.png')] bg-cover bg-center">
         <div class="absolute inset-0 bg-black/40"></div>
       </div>
 
