--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="relative min-h-screen">
       <div
         class="absolute inset-0 bg-[url('https://cdn.pixabay.com/photo/2022/05/31/16/01/couple-7233818_1280.jpg')] bg-cover bg-center">
-        <div class="absolute inset-0 bg-black/40"></div>
+        <div class="absolute inset-0"></div>
       </div>
 
       <!-- Navigation -->
@@ -96,7 +96,7 @@
     </div>
 
     <!-- Features Section -->
-    <div class="py-16 bg-gray-50 sm:min-h-screen">
+    <div class="py-16 bg-gray-50">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <h2 class="text-3xl font-bold text-center mb-12">Why Choose LiveRishtey?</h2>
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
