--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- Hero Section -->
     <div class="relative min-h-screen">
       <div
-        class="absolute inset-0 bg-[url('https://cdn.pixabay.com/photo/2022/05/31/16/01/couple-7233818_1280.jpg')] bg-cover bg-center">
+        class="absolute inset-0 bg-[url('https://cdn.pixabay.com/photo/2015/03/30/12/35/sunset-698501_1280.jpg')] bg-cover bg-center">
         <div class="absolute inset-0"></div>
       </div>
 
@@ -51,15 +51,15 @@
       </nav>
 
       <!-- Hero Content -->
-      <div class="relative z-10 max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 pt-10 pb-16">
+      <div class="relative z-10 max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 pt-10 pb-16 md:pt-16">
         <div class="text-center">
           <div
-            class="border relative border-blue-200 border-whit/50 inline-flex items-center p-0.5 pl-2.5 rounded-full gap-x-2 border-white/40  bg-gray-950/20 before:scale-y-110 before:absolute before:inset-x-4 before:-bottom-px before:bg-gradient-to-r before:from-transparent before:via-yellow-50 before:to-transparent before:h-px before:w-3/5 mb-3">
+            class="border relative border-blue-200 border-whit/50 inline-flex items-center p-0.5 pl-2.5 rounded-full gap-x-2 border-white/40  bg-gray-950/20 before:scale-y-110 before:absolute before:inset-x-4 before:-bottom-px before:bg-gradient-to-r before:from-transparent before:via-yellow-50 before:to-transparent before:h-px before:w-3/5 mb-3 md:mb-9">
             <span class="text-sm tracking-wide text-white">Introducing</span><span
               class="px-2 py-0.5 text-white text-xs font-semibold leading-5 uppercase tracking-wide bg-gray-950/20 border border-white/30 rounded-full">Matrimonial
               Seach Engine</span>
           </div>
-          <h1 class="mt-6 text-3xl font-bold sm:text-4xl text-white lg:text-5xl xl:text-6xl">
+          <h1 class="mt-6 md:mt-9 text-3xl font-bold sm:text-4xl text-white lg:text-5xl xl:text-6xl">
             Perfect Life Partner comes from <span class="text-white font-extrabold">Perfect Search!</span></h1>
           <p class="text-xl text-white/90 mb-12">Join hundreds of happy couples who found their soulmate on Live Rishtey
           </p>
@@ -320,7 +320,7 @@
     <!-- FAQs -->
     <div class="bg-gray-100 py-16 px-6 mx-auto">
       <div class="max-w-6xl mx-auto"
-        x-data="{ faqs: [{ question: 'How to register?', answer: 'You can register on our website by clicking on the Register button on the homepage. You will be asked to provide your full name, phone number, and WhatsApp number. Once you submit your profile, we will contact to complete the registration process.', isOpen: false }, { question: 'How to check matrimonial profiles ads?', answer: 'You can check your matrimonial profiles ads by clicking on the religion button on homepage. Once you select your religion, you will be redirected to the religion page where you can see all the matrimonial profiles ads.', isOpen: false }, { question: 'What is the payment method?', answer: 'We accept all modes of payment.', isOpen: false }, { question: 'What is your return policy?', answer: 'As a nature of classifieds, we do not offer a return policy.!', isOpen: false }, { question: 'How many days will my ads be available?', answer: 'We will make your ad available for 7 days.', isOpen: false }, { question: 'How to verify ads?', answer: 'You can verify ads prospective by doing background check in their locality and at Qazi.', isOpen: false }] }">
+        x-data="{ faqs: [{ question: 'How to register?', answer: 'You can register on our website by clicking on the Register button on the homepage. You will be asked to provide your matrimonial information. We will contact you to publish the Ad.', isOpen: false }, { question: 'How to check matrimonial profiles ads?', answer: 'You can check your matrimonial profiles ads by clicking on the religion button on homepage. Once you select your religion, you will be redirected to the religion page where you can see all the matrimonial profiles ads.', isOpen: false }, { question: 'What is the payment method?', answer: 'We accept all modes of payment.', isOpen: false }, { question: 'What is your return policy?', answer: 'As a nature of classifieds, we do not offer a return policy.!', isOpen: false }, { question: 'How many days will my ads be available?', answer: 'We will make your ad available for 7 days.', isOpen: false }, { question: 'How to verify ads?', answer: 'You can verify ads prospective by doing background check in their locality and at Qazi.', isOpen: false }] }">
         <div class="text-center mb-12">
           <h2 class="text-3xl font-bold text-gray-900">Frequently Asked Questions</h2>
           <p class="mt-4 text-gray-600">Have questions? We're here to help.</p>
