--- a/privacy.html
+++ b/privacy.html
@@ -12,6 +12,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="">
     <link rel="preload" as="style" href="fb087be6.css">
     <link rel="stylesheet" href="fb087be6.css">
+    <script defer src="https://cdn.tailwindcss.com"></script>
     <meta name="twitter:card" content="summary_large_image" inertia="">
     <meta name="twitter:site" content="@liverishtey" inertia="">
     <meta name="twitter:title" content="Privacy Policy" inertia="">
@@ -23,7 +24,7 @@
     <meta property="og:title" content="Privacy Policy" inertia="">
     <meta property="og:description" content="Last updated on November 2, 2021" inertia="">
     <meta property="og:image" content="https://liverishtey.com/img/" inertia="">
-    <meta property="description" content="Last updated on November 2, 2021" inertia="">
+    <meta property="description" content="Last updated on November 18, 2024" inertia="">
     <title inertia="">Privacy Policy - Live Rishtey</title>
     <style type="text/css">
       #nprogress {
