--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <body class="font-[Poppins]">
     <!-- Hero Section -->
     <div class="relative min-h-screen">
-      <img class="absolute h-full inset-0 object-cover w-full object-center" src="https://npf-prod.imgix.net/uploads/92e52a0b205e43b28f0fad900144da2e.jpg?auto=compress%2Cformat&amp;crop=focalpoint&amp;fit=crop&amp;fp-x=0.5&amp;fp-y=0.5&amp;h=1004&amp;q=80&amp;w=1600" alt="" loading="" style="aspect-ratio: 1600 / 1004;">
+      <img class="absolute h-full inset-0 object-cover w-full mix-blend-multiply contrast-100 opacity-35 saturate-0" src="https://npf-prod.imgix.net/uploads/92e52a0b205e43b28f0fad900144da2e.jpg?auto=compress%2Cformat&amp;crop=focalpoint&amp;fit=crop&amp;fp-x=0.5&amp;fp-y=0.5&amp;h=1004&amp;q=80&amp;w=1600" alt="" loading="" style="aspect-ratio: 1600 / 1004;">
       <!-- <div
         class="absolute inset-0 bg-[url('https://cdn.pixabay.com/photo/2015/03/30/12/35/sunset-698501_1280.jpg')] bg-cover bg-center">
         <div class="absolute inset-0"></div>
