bg color update

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="relative min-h-screen">
       
       <div
-        class="absolute inset-0 bg-gradient-to-r from-pink-500 to-rose-600">
+        class="bg-gradient-to-r from-blue-800 to-indigo-900">
         <div class="absolute inset-0"></div>
       </div>
 
