update bg color

--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
   <body class="font-[Poppins]">
     <!-- Hero Section -->
     <div class="relative min-h-screen">
-      
       <div
-        class="bg-gradient-to-r from-blue-800 to-indigo-900">
+        class="absolute inset-0 bg-gradient-to-r from-fuchsia-600 to-pink-600">
         <div class="absolute inset-0"></div>
       </div>
 
