update bg color

--- a/index.html
+++ b/index.html
@@ -31,11 +31,7 @@
 
   <body class="font-[Poppins]">
     <!-- Hero Section -->
-    <div class="relative min-h-screen">
-      <div
-        class="absolute inset-0 bg-gradient-to-r from-fuchsia-600 to-pink-600">
-        <div class="absolute inset-0"></div>
-      </div>
+    <div class="relative min-h-screen bg-gradient-to-r from-fuchsia-600 to-pink-600">
 
       <!-- Navigation -->
       <nav class="relative z-10 bg-transparent">
