update button colors

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="text-white text-2xl font-bold md:flex space-x-8">LiveRishtey</div>
             <div class="flex space-x-4">
               <a href="/register.html"
-                class="bg-pink-600 text-white px-6 py-2 rounded-full hover:bg-pink-700 transition">Register</a>
+                class="bg-indigo-800 text-white px-6 py-2 rounded-full hover:bg-indigo-900 transition">Register</a>
             </div>
           </div>
         </div>
@@ -83,7 +83,7 @@
                 </select>
               </div>
               <button type="submit"
-                class="w-full bg-pink-600 text-white p-3 rounded-full hover:bg-pink-700 transition">Start
+                class="w-full bg-indigo-800 text-white p-3 rounded-full hover:bg-indigo-900 transition">Start
                 Search</button>
             </form>
           </div>
