--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <body class="font-[Poppins]">
     <!-- Hero Section -->
-    <div class="relative min-h-screen bg-gradient-to-r from-fuchsia-600 to-pink-600">
+    <div class="min-h-screen bg-gradient-to-r from-fuchsia-600 to-pink-600">
 
       <!-- Navigation -->
       <nav class="relative z-10 bg-transparent">
@@ -46,14 +46,8 @@
       </nav>
 
       <!-- Hero Content -->
-      <div class="relative max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 pt-10 pb-16 md:pt-16">
+      <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 pt-10 pb-16 md:pt-16">
         <div class="text-center">
-          <div
-            class="border relative border-blue-200 border-whit/50 inline-flex items-center p-0.5 pl-2.5 rounded-full gap-x-2 border-white/40  bg-gray-950/20 before:scale-y-110 before:absolute before:inset-x-4 before:-bottom-px before:bg-gradient-to-r before:from-transparent before:via-yellow-50 before:to-transparent before:h-px before:w-3/5 mb-3 md:mb-9">
-            <span class="text-sm tracking-wide text-white">Introducing</span><span
-              class="px-2 py-0.5 text-white text-xs font-semibold leading-5 uppercase tracking-wide bg-gray-950/20 border border-white/30 rounded-full">Matrimonial
-              Seach Engine</span>
-          </div>
           <h1 class="mt-6 md:mt-9 text-3xl font-bold sm:text-4xl text-white lg:text-5xl xl:text-6xl">
             Perfect Life Partner comes from <span class="text-white font-extrabold">Perfect Search!</span></h1>
           <p class="text-xl text-white/90 mb-12">Join hundreds of happy couples who found their soulmate on Live Rishtey
