--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
   </head>
 
   <body class="font-[Poppins]">
+    
     <!-- Hero Section -->
-    <div class="min-h-screen bg-gradient-to-r from-fuchsia-600 to-pink-600">
+     <section class="bg-gradient-to-r from-pink-500 to-purple-500">
+      <div class="min-h-screen">
 
       <!-- Navigation -->
       <nav class="relative z-10 bg-transparent">
@@ -82,8 +84,8 @@
           </div>
         </div>
       </div>
-    </div>
-
+      </div>
+    </section>
     <!-- Features Section -->
     <div class="py-16 bg-gray-50">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
