--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
   </head>
 
   <body class="font-[Poppins]">
-    
+
     <!-- Hero Section -->
-     <section class="bg-gradient-to-r from-pink-500 to-purple-500">
+     <section class="bg-gradient-to-r from-pink-500 to-rose-500">
       <div class="min-h-screen">
 
       <!-- Navigation -->
