--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <body class="font-[Poppins]">
 
     <!-- Hero Section -->
-     <section class="bg-gradient-to-r from-pink-500 to-rose-500">
+     <section class="bg-gradient-to-r from-violet-200 to-pink-200">
       <div class="min-h-screen">
 
       <!-- Navigation -->
@@ -52,7 +52,7 @@
         <div class="text-center">
           <h1 class="mt-6 md:mt-9 text-3xl font-bold sm:text-4xl text-white lg:text-5xl xl:text-6xl">
             Perfect Life Partner comes from <span class="text-white font-extrabold">Perfect Search!</span></h1>
-          <p class="text-xl text-white/90 mb-12">Join hundreds of happy couples who found their soulmate on Live Rishtey
+          <p class="text-xl text-white/90 my-12">Join hundreds of happy couples who found their soulmate on Live Rishtey
           </p>
 
           <!-- Search Form -->
