--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <body class="font-[Poppins]">
 
     <!-- Hero Section -->
-     <section class="bg-gradient-to-r from-violet-200 to-pink-200">
+     <section class="bg-gradient-to-r from-pink-50 to-purple-50">
       <div class="min-h-screen">
 
       <!-- Navigation -->
