--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
       <!-- Hero Content -->
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 pt-10 pb-16 md:pt-16">
         <div class="text-center">
-          <h1 class="mt-6 md:mt-9 text-3xl font-bold sm:text-4xl text-white lg:text-5xl xl:text-6xl">
-            Perfect Life Partner comes from <span class="text-white font-extrabold">Perfect Search!</span></h1>
-          <p class="text-xl text-white/90 my-12">Join hundreds of happy couples who found their soulmate on Live Rishtey
+          <h1 class="mt-6 md:mt-9 text-3xl font-bold sm:text-4xl text-pink-800 lg:text-5xl xl:text-6xl">
+            Perfect Life Partner comes from <span class="text-pink-800 font-extrabold">Perfect Search!</span></h1>
+          <p class="text-xl text-pink-600 my-12">Join hundreds of happy couples who found their soulmate on Live Rishtey
           </p>
 
           <!-- Search Form -->
