--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <nav class="relative z-10 bg-transparent">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4">
           <div class="flex justify-between items-center">
-            <div class="text-white text-2xl font-bold md:flex space-x-8">LiveRishtey</div>
+            <div class="text-pink-800 text-2xl font-bold md:flex space-x-8">LiveRishtey</div>
             <div class="flex space-x-4">
               <a href="/register.html"
                 class="bg-indigo-800 text-white px-6 py-2 rounded-full hover:bg-indigo-900 transition">Register</a>
