--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 pt-10 pb-16 md:pt-16">
         <div class="text-center">
           <h1 class="mt-6 md:mt-9 text-3xl font-bold sm:text-4xl text-pink-800 lg:text-5xl xl:text-6xl">
-            Perfect Life Partner comes from <span class="text-pink-800 font-extrabold">Perfect Search!</span></h1>
+            Finding the Perfect Life Partner requires <span class="text-pink-600 font-extrabold">a Perfect Search!</span></h1>
           <p class="text-xl text-pink-600 my-12">Join hundreds of happy couples who found their soulmate on Live Rishtey
           </p>
 
